k8s-storage-nodes.yml
# FIXME: PERSISTENT STORAGE
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: leaderless-kv-store-storage-nodes
spec:
  selector:
    matchLabels:
      app: leaderless-kv-store-storage-nodes
  serviceName: leaderless-kv-store-storage-nodes
  replicas: 6
  template:
    metadata:
      labels:
        app: leaderless-kv-store-storage-nodes
    spec:
      containers:
      - name: leaderless-kv-store-storage-node
        image: ghcr.io/46bit/leaderless-key-value-store:latest
        ports:
        - containerPort: 8080
        command: [ "/app/bin/k8s-storage-node-startup.sh"]
        volumeMounts:
        - name: leaderless-kv-store-storage-nodes-config
          mountPath: /mnt/config
        - name: leaderless-kv-store-storage-data
          mountPath: /mnt/data
      volumes:
      - name: leaderless-kv-store-storage-nodes-config
        configMap:
          name: leaderless-kv-store-storage-nodes-config
      - name: leaderless-kv-store-storage-data
        persistentVolumeClaim:
          claimName: leaderless-kv-store-storage-data
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1
            podAffinityTerm:
              topologyKey: "kubernetes.io/hostname"
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - leaderless-kv-store-storage-nodes
  volumeClaimTemplates:
  - metadata:
      name: leaderless-kv-store-storage-data
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 25Gi
      storageClassName: do-block-storage

---
apiVersion: v1
kind: Service
metadata:
  name: leaderless-kv-store-storage-nodes
spec:
  clusterIP: None
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: leaderless-kv-store-storage-nodes
...
