k8s-coordinators.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: leaderless-kv-store-coordinators
spec:
  selector:
    matchLabels:
      app: leaderless-kv-store-coordinators
  replicas: 3
  template:
    metadata:
      labels:
        app: leaderless-kv-store-coordinators
    spec:
      containers:
      - name: leaderless-kv-store-coordinator
        image: ghcr.io/46bit/leaderless-key-value-store:latest
        ports:
        - containerPort: 8080
        command: [ "/app/bin/coordinator", "/mnt/coordinator-config.yml" ]
        volumeMounts:
        - name: leaderless-kv-store-coordinators-config
          mountPath: /mnt
      volumes:
        - name: leaderless-kv-store-coordinators-config
          configMap:
            name: leaderless-kv-store-coordinators-config
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1
            podAffinityTerm:
              topologyKey: "kubernetes.io/hostname"
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - leaderless-kv-store-coordinators

---
apiVersion: v1
kind: Service
metadata:
  name: leaderless-kv-store-coordinators
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: leaderless-kv-store-coordinators
...

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: leaderless-kv-store
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
spec:
  tls:
    - hosts:
      - leaderless-kv-store.46bit.cloud
      secretName: leaderless-kv-store-tls
  rules:
  - host: leaderless-kv-store.46bit.cloud
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: leaderless-kv-store-coordinators
            port:
              number: 80
...
